--- v1.3 (2017-xx-xx) ---
*** common ***
* Update Qt SDK version from 5.7.1 to 5.8.0.
*** build-project ***
* Change order of checks in DetectBuildAutomationSystemType():
  from: qmake --> cmake --> autotools --> unknown
  to:   cmake --> autotools --> qmake --> unknown
* Update InstallQmakeProject():
  delete automatically generated *_resource.rc files.

--- v1.2 (2017-01-23) ---
*** common ***
* Update Qt SDK version from 5.7.0 to 5.7.1.
* Update Android SDK version from r24.4.1 to r25.2.3.
* Update Android NDK version from r12b to r13b.
* Unpack Android SDK and NDK after downloading using `unzip` tool.
*** build-project ***
* Add support of build of cmake-based projects for Android.

--- v1.1 (2016-11-19) ---
*** common ***
* Add 'linux', 'windows', 'android' and 'qt-sdk' targets into Makefile for
  downloading of LXE, MXE, Android SDK+NDK and Qt SDK accordingly. Default
  target ('download') use them all sequentially.
* Update Android NDK version from r12 to r12b.
*** build-project ***
* Update InstallQmakeProject():
  - delete more extra files which are generated by Qt >= 5.7
  - delete static libraries only if there are other files besides them
* Update cmake usage in PrepareBuild() after changes in MXE and LXE.
* Change target names scheme for Android builds:
  android-<Android API level>_<target architecture>
  ANDROID_PLATFORM variable from config files will be ignored, because it is
  specified in SYSTEM variable now.
* Change Android application package names scheme:
  <Project name>_android-<Android API level>_<target architecture>.apk
* Add 'install-to-sysroot' (useful for using of extra libraries in android
  program) and 'install-to-qt-sdk' (useful for modules, plugins and libraries
  like qtserialport, qsqlmysql, qca, etc.) command-line options.
* Add timestamps into build.log files.
*** build-supervisor ***
* Fix title in html files generated by cppcheck-htmlreport.
* Add timestamps into cppcheck.log files.

--- v1.0 (2016-06-22) ---
*** common ***