@@ -1,6 +1,8 @@
 --- v1.3 (2017-xx-xx) ---
 *** common ***
 * Update Qt SDK version from 5.7.1 to 5.8.0.
+* Update Android NDK version from r13b to r14b.
+* Update Android SDK version from r24.4.1 to r26.0.2 (3859397).
 *** build-project ***
 * Change order of checks in DetectBuildAutomationSystemType():
   from: qmake --> cmake --> autotools --> unknown
